--- a/src/Home.css
+++ b/src/Home.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: calc(100vh - 25px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,7 +39,7 @@
 
 .overallDiv {
   width: vw;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .topContainer {
   /* position: sticky;
