--- a/src/About.css
+++ b/src/About.css
@@ -1,6 +1,6 @@
 .about-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: calc(100vh - 50px);
   display: flex;
   flex-direction: column;
   align-items: start;
