--- a/src/Home.css
+++ b/src/Home.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -102,8 +102,18 @@
   font-size:large;
   line-height: 1.2;
   font-weight: bold;
-  /* font-family: 'Helvetica Neue', Arial, sans-serif; */
-  /* font-family: "Roboto", sans-serif; */
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  paint-order: stroke fill;
+  text-shadow: 1.5px 1.5px 1.5px #000000;
+  word-break: break-all;
+}
+
+.tourneyTitle {
+  color: #FFF;
+  font-size:larger;
+  line-height: 1.4;
+  font-weight: bold;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
   paint-order: stroke fill;
@@ -249,6 +259,12 @@
 #map {
   width: 600px;
   height: 400px;
+}
+
+.stickyContainer {
+  position: sticky;
+  background: #292C33;
+  z-index: 20;
 }
 
 .flexMapVid {
