--- a/src/RewindSetButton.css
+++ b/src/RewindSetButton.css
@@ -1,8 +1,8 @@
 
 .rewindSetButton {
-  display: inline-block;
   width: 40px;
   height: 40px;
+  justify-self: center;
   /* background-color: aqua; */
 }
 
