progress slider vod update

--- a/src/Home.css
+++ b/src/Home.css
@@ -207,6 +207,13 @@
   /* margin-left: 100px; */
 }
 
+.set-row-5 {
+  position: relative;
+  z-index: 4;
+  /* margin-left: 100px; */
+}
+
+
 .set-row-3 {
 }
 .set-row-3-flex {
