--- a/src/Home.css
+++ b/src/Home.css
@@ -99,8 +99,8 @@
   position: fixed;
   bottom: 15px;
   right: 25px;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -290,6 +290,7 @@
 .bigLinkHolder {
   display: flex;
   /* flex-wrap: wrap; */
+  text-decoration: none;
   width: vw;
   align-items: center;
   padding-left: 12px;
@@ -353,9 +354,14 @@
 }
 
 .bigLinkLabel {
+  color: #FFF;
   font-size:small;
   text-wrap: wrap;
+  text-decoration: none;
   max-lines: 1;
+  background-color: #181c24;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .app-inform {
