--- a/src/FilterButton.css
+++ b/src/FilterButton.css
@@ -2,7 +2,7 @@
   width: 60px;
   height: 60px;
   background-color: #000000;
-  border: 2px solid gray;
+  border: 2px solid rgb(191, 191, 191);
   border-radius: 10px;
   /* padding: 5px; */
   margin: 8px;
