--- a/src/Home.css
+++ b/src/Home.css
@@ -108,11 +108,16 @@
   /* width: 100%; */
 }
 
-
-
 .charemoji {
   height: 36px;
   width: 36px;
+}
+
+.charemojimatches {
+  height: 36px;
+  width: 36px;
+  background-image: radial-gradient(#aaffff88, #aaffff00 200%);
+  box-shadow: 0px 0px 30px 2px rgb(170 255 255 / 0.8);
 }
 .schuemoji {
   height: 36px;
@@ -187,6 +192,7 @@
   margin-top: -16px;
   border-top-left-radius: 8px;
   z-index: 2;
+  align-self: flex-start;
 }
 
 .tourney-icon-no-rad {
@@ -197,22 +203,58 @@
   margin-top: -17px;
 }
 
+.tourney-timestamp {
+  width: fit-content;
+  font-size: small;
+  position: absolute;
+  align-self: flex-end;
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: black;
+  paint-order: stroke fill;
+  text-shadow: 1.2px 1.2px 1.2px #000000;
+  margin-right: -8px;
+  margin-top: -12px;
+  z-index: 2;
+  text-align: center;
+  vertical-align: center;
+  justify-content: center;
+  justify-items: center;
+  display:flex;
+  flex-direction: row; 
+}
+
+.t1-stamp {
+  align-self: center;
+}
+.live-text {
+  align-self: center;
+  font-size: x-small;
+  padding-left: 8px;
+  /* text-align: center; */
+  /* letter-spacing: -1px; */
+}
+
 .set-row-2 {
   color: #FFF;
   font-size:large;
   line-height: 1.2;
   font-weight: bold;
   position: relative;
+  padding-top: 4px;
   z-index: 3;
   /* margin-left: 100px; */
 }
 
 .set-row-5 {
-  position: relative;
+  /* align-self: stretch; */
+  /* position: relative; */
   z-index: 4;
   /* margin-left: 100px; */
 }
 
+.set-row-matches {
+  box-shadow: 0px 0px 4px 2px rgb(170 255 255 / 0.8);
+}
 
 .set-row-3 {
 }
@@ -250,6 +292,10 @@
   padding: 16px;
   padding-bottom: 6px;
   margin: 8px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
 }
 
 .set-row-1:hover {
@@ -293,8 +339,8 @@
   text-decoration: none;
   width: vw;
   align-items: center;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 .bigLink {
   font-size:x-small;
@@ -308,31 +354,66 @@
   padding-top: 4px;
   padding-bottom: 4px;
 }
+.bigLinkLabel {
+  color: #FFF;
+  font-size:small;
+  text-wrap: wrap;
+  text-decoration: none;
+  max-lines: 1;
+  background-color: #181c24;
+  border-radius: 10px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.searchAndFilters {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow-x:hidden;
+  align-self: center;
+}
+
+.searchOnly {
+
+}
+
+.linkRowHolder {
+  max-width: 100vw;
+}
 
 .linkRow {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  max-width: 100vw;
   justify-content: space-between;
+  align-items: center;
+  align-content: center;
 }
 .toggleLiveVodHolder {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  padding-right: 2px;
 }
 
 .toggleLiveVod {
   font-weight:bold;
   font-size: large;
   color: #fffa;
-  padding:16px;
+  padding:12px;
 }
 
 .toggleLiveVodCurrent {
   font-size: large;
   font-weight:bold;
   color: #fff;
-  padding:16px;
+  padding:12px;
 }
 
 .toggleLiveVod:active {
@@ -351,17 +432,6 @@
   align-self: flex-end;
   justify-self: flex-end;
   margin-right: 10px;
-}
-
-.bigLinkLabel {
-  color: #FFF;
-  font-size:small;
-  text-wrap: wrap;
-  text-decoration: none;
-  max-lines: 1;
-  background-color: #181c24;
-  border-radius: 10px;
-  padding: 10px;
 }
 
 .app-inform {
@@ -390,4 +460,13 @@
 
 .rawStyle {
   font-size: small
+}
+
+.textGlow {
+  /* text-shadow : horizontal-shadow vertical-shadow blur #aaffff88; */
+  /* background-color: #aaffffaa; */
+  background-image: radial-gradient(#aaffff88, #aaffff00 200%);
+  box-shadow: 0px 0px 4px 2px rgb(170 255 255 / 0.8);
+  /* box-shadow: 0px 0px 4px #aaffffaa; Horizontal offset, vertical offset, blur radius, color */
+
 }
