--- a/src/RewindSetButton.css
+++ b/src/RewindSetButton.css
@@ -19,12 +19,19 @@
 .rewindSetRow {
   height: 40px;
   justify-self:stretch;
+  align-self: stretch;
+  flex-grow: 1;
+  z-index: 4;
+
   display:flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
   justify-items: center;
   align-items:center;
+    flex-grow: 1;
+  flex-shrink: 1;
+
   /* flex-grow: 1; */
 }
 
@@ -49,4 +56,46 @@
 
 .markText {
 
+}
+
+
+
+
+
+
+
+
+
+
+
+.rc-slider [data-slider-tooltip]::before,
+.rc-slider [data-slider-tooltip]::after {
+  position: absolute;
+  top: -6px;
+  left: 50%;
+  display:none;
+}
+.rc-slider [data-slider-tooltip]::before {
+  content: "";
+  transform: translateX(-50%);
+  border-width: 4px 6px 0 6px;
+  border-style: solid;
+  border-color: rgba(0,0,0,0.7) transparent transparent transparent;
+}
+.rc-slider [data-slider-tooltip]::after {
+  content:attr(data-slider-tooltip);
+  transform: translateX(-50%) translateY(-100%);
+  background: rgba(0,0,0,0.7);
+  text-transform:none;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 5px;
+  pointer-events: none;
+  padding: 4px 4px;
+}
+.rc-slider:active [data-slider-tooltip]::before,
+.rc-slider:active [data-slider-tooltip]::after,
+.rc-slider-handle:hover [data-slider-tooltip]::before,
+.rc-slider-handle:hover [data-slider-tooltip]::after {
+  display:block;
 }
