Some seo updates

--- a/src/About.css
+++ b/src/About.css
@@ -16,6 +16,8 @@
 .about-heading1 {
   font-size: 20px;
   line-height: 28px;
+  margin-top: 0px;
+  margin-bottom: -10px;
 }
 .about-heading2 {
   font-size: 18px;
