--- a/src/SearchInputBar.css
+++ b/src/SearchInputBar.css
@@ -17,6 +17,11 @@
   align-self: center;
 }
 
+.searchInputBar:focus {
+  outline: 1px solid #aaa;
+}
+
+
 .searchTerm {
   color: #FFF;
   font-size:small;
@@ -45,3 +50,85 @@
   max-width: 100vw;
   align-self: center;
 }
+
+.outerContainer {
+  min-width: 48px;
+  max-width: 200px;
+  display:flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  /* flex-grow: 1;
+  flex-shrink: 1; */
+  /* position: relative;
+  overflow:visible; */
+}
+
+.searchOuterContainer {
+  z-index: 100;
+  align-self: center;
+  background-color: orange;
+  align-content: center;
+}
+
+.dropdownList {
+  position: absolute;
+  /* top: 100px; */
+  /* left: 0%; */
+  /* top: 100%; */
+  /* left: 0; */
+  width: 60px;
+  border: 1px solid #ccc;
+  list-style: none;
+  padding: 0;
+  margin-bottom: -1px;
+  margin-top: 34px;
+  margin-left: 6px;
+  background-color: white;
+  z-index: 21;
+
+}
+
+.dropdownItem {
+  padding: 8px;
+  cursor: pointer;
+  /* color: #ffffff; */
+  width: 180px;
+    background: #292C33;
+  height: 40px ;
+  border: 0.5px solid white ;
+  border-right: 1px solid white ;
+}
+
+.charDropdownItem {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: none;
+  height: 40px;
+  align-items: center;
+  align-content: center;
+}
+
+.searchCharEmoji {
+  height: 36px;
+  width: 36px;
+  flex-grow: 0;
+}
+
+.searchCharText {
+  /* height: 36px;
+  width: 36px; */
+  /* flex-grow: 0; */
+  color:white;
+  padding-left: 6px;
+  font-size: medium;
+}
+
+.searchCharTextX {
+  /* height: 36px;
+  width: 36px; */
+  /* flex-grow: 0; */
+  color:white;
+  padding-left: 6px;
+  font-size: large;
+}
+
