--- a/src/FilterView.css
+++ b/src/FilterView.css
@@ -86,12 +86,14 @@
   width: 60px;
   height: 60px;
   margin: 1px;
-  opacity: 60%;
+  opacity: 74%;
+  border: 2px solid rgb(25, 78, 33, 00);
 }
 
 .charTileMatches {
   opacity: 100%;
   box-shadow: 0 0 100px greenyellow;
+  border: 2px solid rgb(25, 78, 33);
 }
 
 .charFilterContainer {
