--- a/src/TimeRangeSlider.css
+++ b/src/TimeRangeSlider.css
@@ -9,6 +9,7 @@
   left: 20px;
   width: 60%;
   bottom:8px;
+  margin-bottom: env(safe-area-inset-bottom);
   /* margin-top: 40px; */
   /* margin-bottom: 40px; */
   /* position:absolute; */
