--- a/src/Home.css
+++ b/src/Home.css
@@ -112,7 +112,8 @@
   position: fixed;
   bottom: 100px;
   /* right: 25px; */
-  width: 100%;
+  width: calc(100% - 100px);
+  left:50px;
   /* height: 300px; */
   display: flex;
   align-items: center;
